Implementa conexion a mongo cloud db

--- a/config/production.ini
+++ b/config/production.ini
@@ -1,2 +1,5 @@
 [openai]
-api_key = "sk-b*******"
+api_key = sk-b*******
+
+[mongodb]
+cloud_conn = mongodb+srv://<user>:<password>@cluster0.uhcqt8t.mongodb.net/recetas?retryWrites=true&w=majority
